hses_fred/output/default_config/25-02-16-21-14-58/29-185-82-0/02_drop_only_distributed/rulesets/iptables/sw4-iptables-save
# Generated on Sun Feb 16 21:16:09 2025
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
-A INPUT -A INPUT -s 192.0.0.38 -d 0.0.0.1:192.0.0.35 -p * --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.38 -d 192.0.0.38 -p * --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.38 -d 192.0.0.40:255.255.255.255 -p * --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.9:192.0.0.36 -p * --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.40:192.0.0.68 -p * --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.5 -d 192.0.0.38 -p * --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 0:79 --dport 0:442 -j DROP
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 0:79 --dport 444:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.8 -d 192.0.0.36 -p 6 --sport 4841:65535 --dport 0:442 -j DROP
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 23:79 --dport 444:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.7 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 23:442 -j DROP
-A INPUT -A INPUT -s 192.0.0.69 -d 192.0.0.36 -p 6 --sport 81:65535 --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 0:442 --dport 0:79 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 444:4839 --dport 0:79 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 4841:65535 --dport 0:79 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 0:442 --dport 81:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.8 -p 6 --sport 0:442 --dport 4841:65535 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 23:442 --dport 0:21 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 0:21 --dport 23:79 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7 -p 6 --sport 0:21 --dport 81:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.7:192.0.0.8 -d 192.0.0.36 -p 7:255 --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.7:192.0.0.8 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 444:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.7:192.0.0.8 -d 192.0.0.36 -p 6 --sport 81:4839 --dport 4841:65535 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7:192.0.0.8 -p 7:255 --sport * --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7:192.0.0.8 -p 6 --sport 444:4839 --dport 81:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7:192.0.0.8 -p 6 --sport 4841:65535 --dport 81:4839 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.7:192.0.0.8 -p 6 --sport 444:4839 --dport 4841:65535 -j DROP
-A INPUT -A INPUT -s 192.0.0.69 -d 192.0.0.36 -p 6 --sport 0:79 --dport * -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.69 -p 6 --sport * --dport 0:79 -j DROP
-A INPUT -A INPUT -s 192.0.0.36 -d 192.0.0.69 -p 6 --sport * --dport 81:65535 -j DROP
COMMIT
# Completed on Sun Feb 16 21:16:09 2025
